--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,8 +9,10 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "thebearingedge.lfz-code"
-      ]
+		"thebearingedge.lfz-code",
+		"ysemeniuk.emmet-live",
+		"agutierrezr.emmet-keybindings"
+	]
     }
   },
   "postCreateCommand": "[ ! -f package-lock.json ] || npm ci; sudo chown -R dev:dev ~/.ssh && chmod 700 ~/.ssh && chmod 600 ~/.ssh/* && chmod 644 ~/.ssh/*.pub",
